--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Md Sarfraz Portfolio" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>MD Sarfraz Alam | Portfolio</title>
-  <meta name="description" content="Self Developed personal website build with React.js">
+  <meta name="description" content="Md Sarfraz Portfolio">
 </head>
 
 <body>
