--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>MD Sarfraz Alam | Portfolio</title>
   <meta name="description" content="Md Sarfraz Portfolio">
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "j04pa2k2hs");
+  </script>
 </head>
 
 <body>
